# mlops-dvc

./: .gitignore  README.md  data.zip.dvc  dvc.yaml  params.yaml  pyproject.toml
src/compression/: __init__.py  data.py  model.py  train.py
