[project]
name = "compression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.59.1",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
]

[project.scripts]
compression = "compression:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
